ex5/testdata/typechecker/error/ExtendsTest-err3.java
class ExtendsTest {
	public static void main(String[] a){
    }
}

class A extends D {} 
class B extends A {} // TE
class C extends B {}
class D extends C {} 
